# youtube-trends

./: best_youtube_classifier.pkl  feature_scaler.pkl  ml_youtube_trends.ipynb  pyproject.toml
