[project]
name = "youtube-trends"
version = "0.1.0"
description = ""
authors = [
    {name = "17matb",email = "147427088+17matb@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "xgboost (>=3.0.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

